--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
 
     </main>
 
+    <footer class="main-footer">
+        <div class="footer-content">
+            <div class="footer-info">
+                <h4>Walz Shop</h4>
+                <p>Tempat top-up game favorit Anda dengan harga murah, cepat, dan terpercaya.</p>
+            </div>
+            <div class="footer-social">
+                <h4>Ikuti Kami</h4>
+                <a href="https://wa.me/6282298902274" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                <a href="mailto:walzlonely@gmail.com" class="social-icon"><i class="far fa-envelope"></i></a>
+                </div>
+        </div>
+        <div class="footer-copyright">
+            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+        </div>
+    </footer>
+
     <div id="modal-overlay" class="modal-overlay">
         <div id="error-modal" class="modal"></div>
     </div>
