--- a/game.html
+++ b/game.html
@@ -18,9 +18,11 @@
     </header>
 
     <main class="container">
+        <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali</a>
+
         <section class="game-info">
-            <img id="game-banner" src="" alt="Game Banner" class="game-banner">
-            <h1 class="game-name"></h1>
+            <img id="game-banner" src="" alt="Game Banner" class="game-banner-page">
+            <h1 class="game-name-h1"></h1>
             <p class="game-description"></p>
         </section>
 
