--- a/game.html
+++ b/game.html
@@ -27,10 +27,29 @@
         </section>
 
         <section class="form-section">
-            <div class="form-step active">
-                <span class="step-number">1</span>
-                <span class="step-title">Masukkan User ID</span>
+            <div class="form-steps-container">
+                <div class="form-step" data-step="1">
+                    <span class="step-number">1</span>
+                    <span class="step-title">User ID</span>
+                </div>
+                <div class="form-step" data-step="2">
+                    <span class="step-number">2</span>
+                    <span class="step-title">Pilih Produk</span>
+                </div>
+                <div class="form-step" data-step="3">
+                    <span class="step-number">3</span>
+                    <span class="step-title">Pembayaran</span>
+                </div>
+                <div class="form-step" data-step="4">
+                    <span class="step-number">4</span>
+                    <span class="step-title">Voucher</span>
+                </div>
+                <div class="form-step" data-step="5">
+                    <span class="step-number">5</span>
+                    <span class="step-title">Konfirmasi</span>
+                </div>
             </div>
+            
             <div class="form-group">
                 <input type="text" id="user-id" placeholder="Masukkan User ID">
             </div>
@@ -38,24 +57,15 @@
                 <input type="text" id="server-id" placeholder="Masukkan Server ID">
             </div>
 
-            <div class="form-step">
-                <span class="step-number">2</span>
-                <span class="step-title">Pilih Nominal Top-Up</span>
-            </div>
+            <h2 class="section-title">Pilihan Produk</h2>
             <div id="product-grid" class="product-grid">
                 </div>
 
-            <div class="form-step">
-                <span class="step-number">3</span>
-                <span class="step-title">Pilih Pembayaran</span>
-            </div>
+            <h2 class="section-title">Pilih Pembayaran</h2>
             <div id="payment-grid" class="payment-grid">
                 </div>
             
-            <div class="form-step">
-                <span class="step-number">4</span>
-                <span class="step-title">Punya Kode Voucher?</span>
-            </div>
+            <h2 class="section-title">Kode Voucher</h2>
             <div class="form-group voucher-group">
                 <input type="text" id="voucher-input" placeholder="Masukkan Kode Voucher">
                 <button id="voucher-btn" class="btn btn-apply-voucher">Gunakan</button>
@@ -63,10 +73,7 @@
             </div>
             <div id="voucher-status" class="status-text"></div>
 
-            <div class="form-step">
-                <span class="step-number">5</span>
-                <span class="step-title">Ringkasan & Konfirmasi</span>
-            </div>
+            <h2 class="section-title">Ringkasan & Konfirmasi</h2>
             <div class="summary-section">
                 <table class="summary-table">
                     <tr><td>Produk</td><td id="summary-product">-</td></tr>
