--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Games Murah & Terpercaya</title>
+    <title>Walz Shop - Top Up Game Online Termurah & Tercepat</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,41 +18,38 @@
     </header>
 
     <main class="container">
-        
         <section class="banner-section">
-            <div id="promo-slider" class="slider"></div>
-            <div id="slider-dots" class="slider-dots"></div>
-        </section>
-
-        <section class="section">
-            <h2 class="section-title">Pilih Game Kamu</h2>
-            <div id="games-grid" class="games-grid">
+            <div id="promo-slider" class="slider">
+                </div>
+            <div id="slider-dots" class="slider-dots">
                 </div>
         </section>
 
+        <section class="section">
+            <h2 class="section-title">Top Up Game</h2>
+            <div id="games-grid" class="games-grid">
+                </div>
+        </section>
     </main>
 
     <footer class="main-footer">
         <div class="footer-content">
             <div class="footer-info">
-                <h4>Walz Shop</h4>
-                <p>Tempat top-up game favorit Anda dengan harga murah, cepat, dan terpercaya.</p>
+                <h4>Tentang Walz Shop</h4>
+                <p>Walz Shop menyediakan layanan top up game online termurah dan tercepat untuk berbagai game populer. Transaksi aman, mudah, dan terpercaya.</p>
             </div>
             <div class="footer-social">
                 <h4>Ikuti Kami</h4>
                 <a href="https://wa.me/6282298902274" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
                 <a href="mailto:walzlonely@gmail.com" class="social-icon"><i class="far fa-envelope"></i></a>
-                </div>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
         <div class="footer-copyright">
             <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <div id="modal-overlay" class="modal-overlay">
-        <div id="error-modal" class="modal"></div>
-    </div>
-    
     <script src="script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
