--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Games Termurah & Terpercaya</title>
+    <title>Walz Shop - Top Up Game</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" type="image/x-icon">
@@ -13,7 +13,7 @@
         <div class="container">
             <a href="index.html" class="logo">Walz Shop</a>
             <nav class="nav">
-                <a href="#games-section">Top Up</a>
+                <a href="index.html">Top Up</a>
                 <a href="#">Bantuan</a>
             </nav>
         </div>
@@ -22,14 +22,16 @@
     <main class="main">
         <div class="container">
             <section class="promo-section">
-                <div class="slider">
-                    <div class="slider__track" id="promo-slider"></div>
+                <div class="section-title">Promo Terbaru</div>
+                <div class="slider" id="promo-slider-container">
+                    <div class="slider__track" id="promo-slider">
+                        </div>
                     <div class="slider__dots" id="slider-dots"></div>
                 </div>
             </section>
 
-            <section class="games-section" id="games-section">
-                <h2 class="section-title">Pilih Game</h2>
+            <section class="games-section">
+                <div class="section-title">Pilih Game</div>
                 <div class="games-grid" id="games-grid">
                     </div>
             </section>
