--- a/game.html
+++ b/game.html
@@ -21,19 +21,19 @@
 
     <main class="main">
         <div class="container game-page-container">
-            <div class="game-banner" id="game-banner-container">
-                <img src="" alt="Game Banner" id="game-banner">
+            <div class="game-banner">
+                <img src="" alt="Game Banner" class="game-banner-image" id="game-banner">
                 <h1 class="game-name-h1"></h1>
             </div>
 
             <div class="form-container">
                 <div class="form-steps-indicator">
                     <span class="step-line"></span>
-                    <div class="form-step active">1<div class="step-label">Lengkapi Data</div></div>
-                    <div class="form-step">2<div class="step-label">Pilih Produk</div></div>
-                    <div class="form-step">3<div class="step-label">Pilih Bayar</div></div>
-                    <div class="form-step">4<div class="step-label">Pakai Voucher</div></div>
-                    <div class="form-step">5<div class="step-label">Selesaikan</div></div>
+                    <div class="form-step active" data-step="1">1<div class="step-label">Lengkapi Data</div></div>
+                    <div class="form-step" data-step="2">2<div class="step-label">Pilih Produk</div></div>
+                    <div class="form-step" data-step="3">3<div class="step-label">Pilih Bayar</div></div>
+                    <div class="form-step" data-step="4">4<div class="step-label">Pakai Voucher</div></div>
+                    <div class="form-step" data-step="5">5<div class="step-label">Selesaikan</div></div>
                 </div>
 
                 <div class="form-group">
