--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Walz Shop - Top Up Game</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" type="image/x-icon">
+    <link rel="icon" href="https://files.catbox.moe/k3b8d0.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">Walz Shop</a>
+            <a href="index.html" class="logo">
+                <img src="https://files.catbox.moe/k3b8d0.png" alt="Walz Shop Logo" class="logo-img">
+                Walz Shop
+            </a>
             <nav class="nav">
                 <a href="index.html">Top Up</a>
                 <a href="#">Bantuan</a>
