--- a/game.html
+++ b/game.html
@@ -6,12 +6,15 @@
     <title>Walz Shop - Top Up Game</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" type="image/x-icon">
+    <link rel="icon" href="https://files.catbox.moe/k3b8d0.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">Walz Shop</a>
+            <a href="index.html" class="logo">
+                <img src="https://files.catbox.moe/k3b8d0.png" alt="Walz Shop Logo" class="logo-img">
+                Walz Shop
+            </a>
             <nav class="nav">
                 <a href="index.html">Top Up</a>
                 <a href="#">Bantuan</a>
@@ -21,21 +24,14 @@
 
     <main class="main">
         <div class="container game-page-container">
+            <a href="index.html" class="btn btn-back">&larr; Kembali</a>
+            
             <div class="game-banner">
                 <img src="" alt="Game Banner" class="game-banner-image" id="game-banner">
                 <h1 class="game-name-h1"></h1>
             </div>
 
             <div class="form-container">
-                <div class="form-steps-indicator">
-                    <span class="step-line"></span>
-                    <div class="form-step active" data-step="1">1<div class="step-label">Lengkapi Data</div></div>
-                    <div class="form-step" data-step="2">2<div class="step-label">Pilih Produk</div></div>
-                    <div class="form-step" data-step="3">3<div class="step-label">Pilih Bayar</div></div>
-                    <div class="form-step" data-step="4">4<div class="step-label">Pakai Voucher</div></div>
-                    <div class="form-step" data-step="5">5<div class="step-label">Selesaikan</div></div>
-                </div>
-
                 <div class="form-group">
                     <label for="user-id">1. Masukkan User ID</label>
                     <p class="game-description"></p>
