--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game</title>
+    <title>Walz Shop - Top Up Games Murah & Cepat</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://files.catbox.moe/k3b8d0.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="https://files.catbox.moe/k3b8d0.png" alt="Walz Shop Logo" class="logo-img">
-                Walz Shop
+                <i class="fas fa-gem logo-icon"></i>
+                <span class="logo-text">Walz Shop</span>
             </a>
             <nav class="nav">
-                <a href="index.html">Top Up</a>
-                <a href="#">Bantuan</a>
+                <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+                <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+                <a href="#"><i class="fas fa-headset"></i> Kontak</a>
             </nav>
         </div>
     </header>
@@ -25,16 +27,14 @@
     <main class="main">
         <div class="container">
             <section class="promo-section">
-                <div class="section-title">Promo Terbaru</div>
                 <div class="slider" id="promo-slider-container">
-                    <div class="slider__track" id="promo-slider">
-                        </div>
+                    <div class="slider__track" id="promo-slider"></div>
                     <div class="slider__dots" id="slider-dots"></div>
                 </div>
             </section>
 
             <section class="games-section">
-                <div class="section-title">Pilih Game</div>
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
                 <div class="games-grid" id="games-grid">
                     </div>
             </section>
@@ -43,7 +43,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+            <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
         </div>
     </footer>
 
