--- a/index.html
+++ b/index.html
@@ -3,58 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Games Murah & Cepat</title>
+    <title>Walz Shop - Top Up Termurah</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <header class="header">
-        <div class="container">
-            <a href="index.html" class="logo">
-                <i class="fas fa-gem logo-icon"></i>
-                <span class="logo-text">Walz Shop</span>
-            </a>
-            <nav class="nav">
-                <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-                <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-                <a href="#"><i class="fas fa-headset"></i> Kontak</a>
-            </nav>
+    <div class="navbar">
+        <a href="index.html" class="logo">Walz Shop</a>
+        <div class="nav-links">
+            <a href="index.html">Top Up</a>
+            <a href="#">Bantuan</a>
         </div>
-    </header>
+    </div>
 
-    <main class="main">
-        <div class="container">
-            <section class="promo-section">
-                <div class="slider" id="promo-slider-container">
-                    <div class="slider__track" id="promo-slider"></div>
-                    <div class="slider__dots" id="slider-dots"></div>
+    <div class="container">
+        <div class="header">
+            <h1>Top Up Game Termurah</h1>
+            <p>Pilih game favoritmu dan top up dengan harga terbaik!</p>
+        </div>
+
+        <div class="promo-slider-container">
+            <div class="slider-track" id="promo-slider"></div>
+            <div class="slider-dots" id="slider-dots"></div>
+        </div>
+
+        <div class="section">
+            <h2>Pilih Game</h2>
+            <div class="games-grid" id="games-grid">
                 </div>
-            </section>
-
-            <section class="games-section">
-                <h2 class="section-title">Pilih Game Favoritmu</h2>
-                <div class="games-grid" id="games-grid">
-                    </div>
-            </section>
         </div>
-    </main>
+    </div>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
-            <div class="footer-links">
-                <a href="#">Kebijakan Privasi</a>
-                <a href="#">Syarat & Ketentuan</a>
-            </div>
-            <div class="social-media">
-                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            </div>
-        </div>
-    </footer>
+    <div class="footer">
+        <p>&copy; 2024 Walz Shop</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
