--- a/game.html
+++ b/game.html
@@ -3,116 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game - Game Name</title>
+    <title>Walz Shop - Top Up Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="header">
-        <div class="container">
-            <h1 class="logo"><a href="index.html">My TopUp</a></h1>
+    <div class="navbar">
+        <a href="index.html" class="logo">Walz Shop</a>
+        <div class="nav-links">
+            <a href="index.html">Top Up</a>
+            <a href="#">Bantuan</a>
         </div>
-    </header>
+    </div>
 
-    <main class="container">
-        <img id="game-banner" src="..." alt="Game Banner" class="game-banner">
+    <div class="container">
+        <button class="back-btn" onclick="window.history.back()">← Kembali</button>
 
-        <div class="topup-form">
-            <div class="section">
-                <h2>1. Masukkan ID Pengguna</h2>
-                <input type="text" id="user-id" placeholder="Masukkan ID Pengguna">
+        <div class="game-info-card">
+            <img id="game-banner" alt="Game Banner">
+            <h1 class="game-name-h1"></h1>
+            <p class="game-description"></p>
+        </div>
+
+        <div class="main-content">
+            <div class="section-card">
+                <div class="section-header">
+                    <span class="step-number">1</span>
+                    <h3>Masukkan ID Pengguna</h3>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="user-id" placeholder="Masukkan User ID">
+                    <div class="tooltip">?
+                        <span class="tooltiptext">Contoh: 123456789</span>
+                    </div>
+                </div>
+                <div class="input-group" id="server-id-group" style="display: none;">
+                    <input type="text" id="server-id" placeholder="Masukkan Server ID">
+                    <div class="tooltip">?
+                        <span class="tooltiptext">Contoh: 1234</span>
+                    </div>
+                </div>
             </div>
 
-            <div class="section">
-                <h2>2. Pilih Nominal Top Up</h2>
+            <div class="section-card">
+                <div class="section-header">
+                    <span class="step-number">2</span>
+                    <h3>Pilih Nominal Top Up</h3>
+                </div>
                 <div class="product-grid" id="product-grid">
                     </div>
             </div>
 
-            <div class="section">
-                <h2>3. Pilih Metode Pembayaran</h2>
+            <div class="section-card">
+                <div class="section-header">
+                    <span class="step-number">3</span>
+                    <h3>Pilih Metode Pembayaran</h3>
+                </div>
                 <div class="payment-grid" id="payment-grid">
                     </div>
             </div>
 
-            <div class="section">
-                <h2>4. Punya Kode Voucher?</h2>
-                <div class="voucher-input-group">
-                    <input type="text" id="voucher-code" placeholder="Masukkan kode voucher">
-                    <button class="btn btn-primary btn-sm" id="btn-apply-voucher">Terapkan</button>
+            <div class="section-card">
+                <div class="section-header">
+                    <span class="step-number">4</span>
+                    <h3>Punya Kode Voucher?</h3>
                 </div>
-                <p id="voucher-status" class="status-text"></p>
+                <div class="voucher-input-group">
+                    <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
+                    <button id="voucher-btn" class="btn">Terapkan</button>
+                    <button id="voucher-list-btn" class="btn btn-secondary">Lihat Daftar</button>
+                </div>
+                <div class="status-text" id="voucher-status"></div>
             </div>
 
-            <div class="section">
-                <h2>5. Ringkasan Pembelian</h2>
+            <div class="section-card summary-section">
+                <div class="section-header">
+                    <span class="step-number">5</span>
+                    <h3>Ringkasan Pembelian</h3>
+                </div>
                 <table class="summary-table">
                     <tr>
-                        <td>Produk</td>
-                        <td id="summary-product" class="text-right">-</td>
-                    </tr>
-                    <tr>
                         <td>Harga</td>
-                        <td id="summary-price" class="text-right">-</td>
+                        <td id="summary-product">-</td>
                     </tr>
-                    <tr>
+                    <tr id="summary-discount-row" style="display:none;">
                         <td>Diskon</td>
-                        <td id="summary-discount" class="text-right">0</td>
+                        <td id="summary-discount">-</td>
                     </tr>
                 </table>
                 <div class="summary-total">
                     <span>Total Pembayaran</span>
-                    <span id="summary-total" class="text-right">-</span>
+                    <span id="summary-total">Rp0</span>
                 </div>
-                <div class="checkout-btn-container">
-                    <button class="btn btn-primary btn-block" id="btn-checkout">Checkout</button>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <div class="modal-overlay" id="checkout-modal">
-        <div class="modal">
-            <div class="modal-header">
-                <h3>Konfirmasi Pembelian</h3>
-                <button class="modal-close-btn">&times;</button>
-            </div>
-            <div class="modal-content">
-                <p><strong>ID Pengguna:</strong> <span id="modal-user-id"></span></p>
-                <p><strong>Produk:</strong> <span id="modal-product"></span></p>
-                <p><strong>Harga:</strong> <span id="modal-price"></span></p>
-                <p><strong>Metode Pembayaran:</strong> <span id="modal-payment"></span></p>
-                <div class="payment-info">
-                    <p>Silakan bayar melalui:</p>
-                    <div class="qris-image-container">
-                        <img id="qris-image" src="..." alt="QRIS Code" class="qris-image">
-                    </div>
-                    <p class="instruction">Scan QR Code di atas dengan aplikasi pembayaran Anda.</p>
-                    <p>Atau transfer ke nomor rekening:</p>
-                    <div class="copy-field">
-                        <span id="account-number">1234567890</span>
-                        <button class="btn btn-sm" onclick="copyToClipboard('1234567890')">Salin</button>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-confirm" id="btn-confirm-payment">Konfirmasi Pembayaran</button>
+                <button id="checkout-btn" class="btn btn-primary" disabled>Checkout</button>
             </div>
         </div>
     </div>
 
-    <div class="modal-overlay" id="voucher-list-modal">
-        <div class="modal">
-            <div class="modal-header">
-                <h3>Daftar Voucher</h3>
-                <button class="modal-close-btn">&times;</button>
-            </div>
-            <div class="modal-content" id="voucher-list-content">
-                </div>
-        </div>
+    <div class="footer">
+        <p>&copy; 2024 Walz Shop</p>
+    </div>
+
+    <div class="modal-overlay" id="modal-overlay">
+        <div class="modal" id="promo-list-modal"></div>
+        <div class="modal" id="checkout-modal"></div>
+        <div class="modal" id="error-modal"></div>
     </div>
 
     <script src="script.js"></script>
-
 </body>
 </html>
