--- a/game.html
+++ b/game.html
@@ -3,102 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up</title>
+    <title>Walz Shop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="https://files.catbox.moe/g2447o.png" type="image/x-icon">
 </head>
 <body>
-
-    <header class="header">
-        <div class="container">
-            <a href="index.html" class="logo">
+    <header class="main-header">
+        <div class="container header-container">
+            <div class="logo">
                 <i class="fas fa-gem logo-icon"></i>
-                <span class="logo-text">Walz Shop</span>
-            </a>
-            <nav class="nav">
-                <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-                <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-                <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+                <a href="index.html">Walz Shop</a>
+            </div>
+            <nav class="main-nav">
+                <a href="index.html">Beranda</a>
+                <a href="#games" class="active">Top Up</a>
+                <a href="#about-us">Tentang Kami</a>
             </nav>
         </div>
     </header>
 
-    <main class="main">
-        <div class="container">
-            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
-
-            <div class="game-banner">
-                <img id="game-banner" class="game-banner-image" src="" alt="Game Banner">
+    <main>
+        <section class="game-detail-section container">
+            <div class="game-banner-container">
+                <img src="" alt="" class="game-banner" id="game-banner">
+            </div>
+            <div class="game-info">
                 <h1 class="game-name-h1"></h1>
+                <p class="game-description"></p>
             </div>
 
-            <div class="form-container">
-                <form id="topup-form">
+            <div class="step-card">
+                <div class="step-header">
+                    <span class="step-number">1</span>
+                    <h3>Masukkan Data Akun</h3>
+                </div>
+                <div class="step-content">
                     <div class="form-group">
-                        <label for="user-id"><i class="fas fa-user"></i> Masukkan User ID</label>
-                        <p class="game-description"></p>
-                        <div class="input-group">
-                            <input type="text" id="user-id" placeholder="Contoh: 12345678" required>
-                            <input type="text" id="server-id" placeholder="Server ID (Opsional)" class="server-input">
-                        </div>
+                        <label for="user-id">User ID</label>
+                        <input type="text" id="user-id" placeholder="Masukkan User ID Anda">
                     </div>
-
-                    <div class="form-group">
-                        <label><i class="fas fa-dollar-sign"></i> Pilih Nominal Top Up</label>
-                        <div class="product-grid" id="product-grid">
-                            </div>
+                    <div class="form-group" id="server-id-group">
+                        <label for="server-id">Server ID</label>
+                        <input type="text" id="server-id" placeholder="Masukkan Server ID Anda">
                     </div>
-
-                    <div class="form-group">
-                        <label><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</label>
-                        <div class="payment-grid" id="payment-grid">
-                            </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label><i class="fas fa-receipt"></i> Ringkasan Pembayaran</label>
-                        <div class="summary-card">
-                            <table class="summary-table">
-                                <tr><td>Produk</td><td id="summary-product">-</td></tr>
-                                <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
-                                <tr id="summary-discount-row" style="display:none;"><td>Diskon Voucher</td><td id="summary-discount">-</td></tr>
-                            </table>
-                            <div class="summary-total">
-                                <span>Total Pembayaran</span>
-                                <span id="summary-total">Rp 0</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label><i class="fas fa-tag"></i> Kode Voucher (Opsional)</label>
-                        <div class="voucher-input-group">
-                            <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
-                            <button type="button" id="voucher-apply-btn">Terapkan</button>
-                        </div>
-                        <div class="voucher-extra">
-                            <span id="voucher-status" class="status-text"></span>
-                            <button type="button" id="voucher-list-btn" class="text-button">Lihat Daftar Promo</button>
-                        </div>
-                    </div>
-
-                    <button type="button" id="checkout-btn" class="btn btn-block btn-confirm" disabled>Beli Sekarang</button>
-                </form>
+                </div>
             </div>
-        </div>
+
+            <div class="step-card">
+                <div class="step-header">
+                    <span class="step-number">2</span>
+                    <h3>Pilih Nominal Top Up</h3>
+                </div>
+                <div class="step-content">
+                    <div class="product-grid" id="product-grid">
+                        </div>
+                </div>
+            </div>
+
+            <div class="step-card">
+                <div class="step-header">
+                    <span class="step-number">3</span>
+                    <h3>Pilih Metode Pembayaran</h3>
+                </div>
+                <div class="step-content">
+                    <div class="payment-grid" id="payment-grid">
+                        </div>
+                </div>
+            </div>
+
+            <div class="step-card">
+                <div class="step-header">
+                    <span class="step-number">4</span>
+                    <h3>Ringkasan Pembayaran</h3>
+                </div>
+                <div class="step-content">
+                    <div class="summary-card">
+                        <table class="summary-table">
+                            <tr>
+                                <td>Produk</td>
+                                <td id="summary-product">-</td>
+                            </tr>
+                            <tr>
+                                <td>Metode Bayar</td>
+                                <td id="summary-payment">-</td>
+                            </tr>
+                            <tr id="summary-discount-row" style="display: none;">
+                                <td>Diskon Voucher</td>
+                                <td id="summary-discount">-</td>
+                            </tr>
+                        </table>
+                        <div class="voucher-section">
+                            <div class="voucher-input-group">
+                                <input type="text" id="voucher-input" placeholder="Masukkan kode promo">
+                                <button class="btn btn-apply" id="voucher-apply-btn" disabled>Terapkan</button>
+                            </div>
+                            <button class="btn btn-link" id="voucher-list-btn">Lihat daftar promo</button>
+                            <span id="voucher-status"></span>
+                        </div>
+                        <div class="summary-total">
+                            <span>Total Pembayaran</span>
+                            <span id="summary-total">Rp0</span>
+                        </div>
+                        <button class="btn btn-primary btn-block" id="checkout-btn" disabled>Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+    <footer class="main-footer">
+        <div class="container footer-container">
+            <div class="footer-col about-col">
+                <h3>Walz Shop</h3>
+                <p>Top Up Game Murah, Cepat, dan Terpercaya</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="footer-col">
+                <h3>Layanan</h3>
+                <ul>
+                    <li><a href="index.html#games">Top Up Diamond</a></li>
+                    <li><a href="#">Top Up UC</a></li>
+                    <li><a href="#">Bantuan</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Informasi</h3>
+                <ul>
+                    <li><a href="#">Kebijakan Privasi</a></li>
+                    <li><a href="#">Syarat dan Ketentuan</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="footer-col contact-col">
+                <h3>Kontak</h3>
+                <p><i class="fas fa-envelope"></i> walzlonely@gmail.com</p>
+                <p><i class="fab fa-whatsapp"></i> +62 822-9890-2274</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <div id="modal-overlay" class="modal-overlay">
-        <div id="checkout-modal" class="modal"></div>
-        <div id="promo-list-modal" class="modal"></div>
-        <div id="error-modal" class="modal"></div>
+    
+    <div class="modal-overlay" id="modal-overlay">
+        <div class="modal" id="checkout-modal"></div>
+        <div class="modal" id="promo-list-modal"></div>
+        <div class="modal" id="error-modal"></div>
     </div>
 
     <script src="script.js"></script>
